implemented text record display

--- a/web-ui/src/styles/globals.scss
+++ b/web-ui/src/styles/globals.scss
@@ -46,6 +46,14 @@ body {
   font-family: 'Varela Round', sans-serif;
 }
 
+.spacing {
+  margin: 1rem;
+}
+
+.padding {
+  padding: 1rem;
+}
+
 .pointer {
   cursor: pointer;
 }
