--- a/web-ui/src/styles/widget.scss
+++ b/web-ui/src/styles/widget.scss
@@ -20,7 +20,7 @@
     }
 
     tbody {
-      tr {
+      tr.clickable {
         cursor: pointer;
         &:hover {
           background-color: #7d9e3063;
