--- a/web-ui/src/styles/table.scss
+++ b/web-ui/src/styles/table.scss
@@ -6,4 +6,14 @@
   }
 
   margin-bottom: 0;
+
+  .table {
+    margin-top: 10px;
+      
+    tr {
+      &:nth-child(2n) {
+        background-color: #1a1b1a52;
+      }
+    }
+  }
 }
